2002-09-22  Stephen M Moraco <stephmo@users.sourceforge.net>

  * NEW add LEGO Lamp support for C++
  * NEW added demo/c++/lampTest.C as example
  * 2nd wave of API documentation updates

2002-09-04  Stephen M Moraco <stephmo@users.sourceforge.net>

  * First wave of internal comment updates for Doxygen
     extraction of API documentation
	This round included (1) upgrade of Doxygen control files
	(2) revision of file brief descriptions, and (3) excluding
	of __asm__ code blocks from the generated HTML API docs.

2002-09-01  Stephen M Moraco <stephmo@users.sourceforge.net>

  * Remove legOS from Makefiles and doxygen files
  * Add Linux/Debian support to Makefile.common
  * Prep as 1st brickos test release

2002-08-28  Joseph Woolley <jawoolley@users.sourceforge.net>
  * Updated comments, code and data structures to refer to
    tasks instead of threads and processes.
  * Added menu choice for modifying LNP Host Address at
    run-time.
  * Added menu choice to delete current program.
  * Added low priority task to animate man (while program
    running) and to show/hide the battery low indicator.
  * Updated execi and tm_switcher to keep a tally of the
    number of kernel tasks at run-time.  This value is
    used to determine if any user tasks are running.
  * Updated comments from LegOS to BrickOS and from LegOS
    Network Protocol to Link Network Protocol (unofficial)
  * Fixed minor bug in mm_try_join for "end-of-memory"
    condition.  Previously unchecked, the pointer would
    wrap around into kernel memory; producing undefined
    behaviour.
  * Updated killall so only user tasks or all tasks are
    killed.
  * Added T_IDLE flag to indicate which task is the idle
    task.  Removed now-unnecessary idle_task global
    variable.
  * Modified tm_sleep_wakeup so tasks will interupt lower
    priority tasks when wakeup time is between time-slices.

2002-08-21  Stephen M Moraco <stephmo@users.sourceforge.net>
