@@ -1,8 +1,19 @@
+2002-09-23  Joseph A Woolley <jawoolley@users.sourceforge.net>
+
+  * Removed static buffer in program.c that is used to copy
+    lnp packets.  Instead, malloc and free buffer as needed.
+
 2002-09-22  Stephen M Moraco <stephmo@users.sourceforge.net>
 
   * NEW add LEGO Lamp support for C++
   * NEW added demo/c++/lampTest.C as example
   * 2nd wave of API documentation updates
+
+2002-09-20  Joseph A Woolley <jawoolley@users.sourceforge.net>
+
+  * Added support for "safe-shutdown" of tasks.  Updated tm, mm,
+    program, semaphore and a few others.  Updated demos.
+  * Look in demo programs for examples of new code usage.
 
 2002-09-04  Stephen M Moraco <stephmo@users.sourceforge.net>
 
@@ -198,4 +209,4 @@
 
   * creating this file after 0.2.5 release
 --
-$Id: ChangeLog,v 1.7 2002/09/23 03:47:09 stephmo Exp $
+$Id: ChangeLog,v 1.8 2002/09/24 03:10:06 jawoolley Exp $
